// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser unary expressions parses consecutive unary '-' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Unary {
      "operator": Object {
        "isReserved": false,
        "kind": 7,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "-",
      },
      "right": Unary {
        "operator": Object {
          "isReserved": false,
          "kind": 7,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "-",
        },
        "right": Unary {
          "operator": Object {
            "isReserved": false,
            "kind": 7,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "-",
          },
          "right": Unary {
            "operator": Object {
              "isReserved": false,
              "kind": 7,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "-",
            },
            "right": Unary {
              "operator": Object {
                "isReserved": false,
                "kind": 7,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "-",
              },
              "right": Literal {
                "value": Int32 {
                  "kind": 3,
                  "value": 5,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses consecutive unary 'not' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Unary {
      "operator": Object {
        "isReserved": true,
        "kind": 67,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "not",
      },
      "right": Unary {
        "operator": Object {
          "isReserved": true,
          "kind": 67,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "not",
        },
        "right": Unary {
          "operator": Object {
            "isReserved": true,
            "kind": 67,
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "not",
          },
          "right": Unary {
            "operator": Object {
              "isReserved": true,
              "kind": 67,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "not",
            },
            "right": Unary {
              "operator": Object {
                "isReserved": true,
                "kind": 67,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "not",
              },
              "right": Literal {
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses unary '-' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Unary {
      "operator": Object {
        "isReserved": false,
        "kind": 7,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "-",
      },
      "right": Literal {
        "value": Int32 {
          "kind": 3,
          "value": 5,
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses unary 'not' 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "value": Unary {
      "operator": Object {
        "isReserved": true,
        "kind": 67,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "not",
      },
      "right": Literal {
        "value": BrsBoolean {
          "kind": 1,
          "value": true,
        },
      },
    },
  },
]
`;
